--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -10,7 +10,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name linkmusic.ru www.linkmusic.ru api.linkmusic.ru admin.linkmusic.ru;
+    server_name linkmusic.ru www.linkmusic.ru;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
