--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -38,6 +38,20 @@ server {
     ssl_trusted_certificate /etc/nginx/ssl/live/linkmusic.ru/fullchain.pem;
 
     location /api {
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $custom_forwarded_host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Host $host;
+        proxy_cache_bypass  $http_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass_request_headers on;
+
         proxy_pass http://backend;
     }
 
