--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       dockerfile: docker/production/Dockerfile
     env_file:
       - ../../.env
+    volumes:
+      - ../../public/:/app/public/
     environment:
       DATABASE_CLIENT: ${DATABASE_CLIENT}
       DATABASE_NAME: ${DATABASE_NAME}
