--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -10,7 +10,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name linkmusic.ru www.linkmusic.ru;
+    server_name linkmusic.ru;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -26,12 +26,16 @@ map $http_x_forwarded_host $custom_forwarded_host {
   strapi "backend";
 }
 
+server {
+    server_name www.linkmusic.ru;
+    return 301 $scheme://linkmusic.ru$request_uri;
+}
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name linkmusic.ru www.linkmusic.ru;
+    server_name linkmusic.ru;
 
     ssl_certificate /etc/nginx/ssl/live/linkmusic.ru/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/linkmusic.ru/privkey.pem;
