--- a/backend/src/api/release/documentation/1.0.0/release.json
+++ b/backend/src/api/release/documentation/1.0.0/release.json
@@ -225,6 +225,17 @@
           "schema": {
             "type": "string"
           }
+        },
+        {
+          "name": "filters",
+          "in": "query",
+          "description": "Filters to apply",
+          "deprecated": false,
+          "required": false,
+          "schema": {
+            "type": "object"
+          },
+          "style": "deepObject"
         }
       ],
       "operationId": "get/releases"
@@ -305,7 +316,7 @@
           "deprecated": false,
           "required": true,
           "schema": {
-            "type": "string"
+            "type": "number"
           }
         }
       ],
@@ -385,7 +396,7 @@
           "deprecated": false,
           "required": true,
           "schema": {
-            "type": "string"
+            "type": "number"
           }
         }
       ],
@@ -476,7 +487,7 @@
           "deprecated": false,
           "required": true,
           "schema": {
-            "type": "string"
+            "type": "number"
           }
         }
       ],
