--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -10,13 +10,17 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name linkmusic.ru;
+    server_name linkmusic.ru www.linkmusic.ru;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
+        if ($host ~* www\.(.*)) {
+          set $host_without_www $1;
+          rewrite ^(.*)$ https://linkmusic.ru$request_uri permanent;
+        }
         return 301 https://$server_name$request_uri;
     }
 }
@@ -27,15 +31,10 @@ map $http_x_forwarded_host $custom_forwarded_host {
 }
 
 server {
-    server_name www.linkmusic.ru;
-    return 301 $scheme://linkmusic.ru$request_uri;
-}
-
-server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name linkmusic.ru;
+    server_name linkmusic.ru www.linkmusic.ru;
 
     ssl_certificate /etc/nginx/ssl/live/linkmusic.ru/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/linkmusic.ru/privkey.pem;
