--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ ADMIN_JWT_SECRET=uWSfSSh72dE6VtAzl5tZNw==
 JWT_SECRET=PWxPFpkEDX/lK5E7mBAyWQ==
 
 DATABASE_CLIENT=sqlite
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
+
+POSTGRES_PASSWORD=password
 
 NEXT_PUBLIC_API_URL=
 NODE_ENV=
