--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       dockerfile: docker/development/Dockerfile
     env_file:
       - ../../.env.local
+    volumes:
+      - ../..:/app
+      - /app/node_modules
     environment:
       DATABASE_CLIENT: ${DATABASE_CLIENT}
       DATABASE_NAME: ${DATABASE_NAME}
