--- a/backend/src/api/release/documentation/1.0.0/release.json
+++ b/backend/src/api/release/documentation/1.0.0/release.json
@@ -159,7 +159,7 @@
         {
           "name": "pagination[withCount]",
           "in": "query",
-          "description": "Retun page/pageSize (default: true)",
+          "description": "Return page/pageSize (default: true)",
           "deprecated": false,
           "required": false,
           "schema": {
@@ -236,6 +236,16 @@
             "type": "object"
           },
           "style": "deepObject"
+        },
+        {
+          "name": "locale",
+          "in": "query",
+          "description": "Locale to apply",
+          "deprecated": false,
+          "required": false,
+          "schema": {
+            "type": "string"
+          }
         }
       ],
       "operationId": "get/releases"
