--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-markdown": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
     "react-visibility-sensor": "^5.1.1",
