--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 HOST=0.0.0.0
-PORT=1337
+STRAPI_PORT=1337
+PORT=3000
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=g0EGKJ3HAGQh0eZUaBwTUw==
 ADMIN_JWT_SECRET=uWSfSSh72dE6VtAzl5tZNw==
@@ -11,9 +12,9 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_HOST=
 DATABASE_PORT=
-
 POSTGRES_PASSWORD=password
 
-NEXT_PUBLIC_API_URL=
-NODE_ENV=
-PUBLIC_URL=
+NODE_ENV=development
+PUBLIC_URL=http://localhost:1337
+NEXT_PUBLIC_URL=http://localhost:1337
+NEXT_PUBLIC_API_URL=http://localhost:1337/api
