--- a/backend/package.json
+++ b/backend/package.json
@@ -9,20 +9,21 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-documentation": "^4.4.7",
-    "@strapi/plugin-i18n": "4.4.7",
-    "@strapi/plugin-users-permissions": "4.4.7",
-    "@strapi/strapi": "4.4.7",
-    "pg": "8.7.3"
+    "@strapi/plugin-documentation": "4.7.1",
+    "@strapi/plugin-i18n": "4.7.1",
+    "@strapi/plugin-users-permissions": "4.7.1",
+    "@strapi/strapi": "4.7.1",
+    "pg": "8.10.0"
   },
   "devDependencies": {
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "8.1.0",
+    "eslint": "^8.35.0"
   },
   "strapi": {
     "uuid": "85327231-20fc-41db-a12e-05cb29adaea2"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   }
 }
