--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ../../.env.local
     volumes:
       - ../..:/app
+      - /app/backend/node_modules
+      - /app/frontend/node_modules
       - /app/node_modules
     environment:
       DATABASE_CLIENT: ${DATABASE_CLIENT}
