--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./certbot/www/:/var/www/certbot/:rw
       - ./certbot/conf/:/etc/letsencrypt/:rw
-    command: certonly --webroot --webroot-path=/var/www/certbot --email admin@linkmusic.ru --agree-tos --no-eff-email --force-renewal -d linkmusic.ru
+    command: certonly -v --webroot --webroot-path=/var/www/certbot --email admin@linkmusic.ru --agree-tos --no-eff-email --force-renewal -d linkmusic.ru
 
   backend:
     build:
