--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,34 +11,32 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
-    "@mui/x-date-pickers": "^5.0.0-beta.4",
-    "@types/js-cookie": "^3.0.2",
-    "@types/node": "18.6.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.12",
+    "@mui/x-date-pickers": "^6.0.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "18.14.6",
     "@types/qs": "^6.9.7",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/react-slick": "^0.23.10",
     "@types/react-transition-group": "^4.4.5",
-    "axios": "^0.27.2",
-    "imask": "^6.4.2",
+    "axios": "^1.3.4",
+    "imask": "^6.4.3",
     "js-cookie": "^3.0.1",
-    "next": "12.2.4",
-    "qs": "^6.11.0",
+    "next": "13.2.3",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
-    "react-countup": "^6.3.0",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.34.0",
+    "react-hook-form": "^7.43.5",
     "react-markdown": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
     "react-visibility-sensor": "^5.1.1",
-    "sass": "^1.54.3",
-    "slugify": "^1.6.5",
-    "typescript": "4.7.4"
-  },
-  "devDependencies": {}
+    "sass": "^1.58.3",
+    "slugify": "^1.6.5"
+  }
 }
