--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -34,6 +34,9 @@ services:
     env_file:
       - ../../.env
     volumes:
+      - /app/backend/node_modules
+      - /app/frontend/node_modules
+      - /app/node_modules
       - ../../public/:/app/public/
     environment:
       DATABASE_CLIENT: ${DATABASE_CLIENT}
