--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       context: ./nginx
     volumes:
       - ./nginx:/etc/nginx/conf.d
-      - ./certbot/www:/var/www/certbot/:ro
-      - ./certbot/conf/:/etc/nginx/ssl/:ro
+      - /etc/nginx/ssl/:/etc/nginx/ssl/:ro
     ports:
       - "80:80"
       - "443:443"
@@ -17,15 +16,6 @@ services:
       - backend
       - client
     command: [ "nginx-debug", "-g", "daemon off;" ]
-
-  certbot:
-    image: certbot/certbot:latest
-    depends_on:
-      - webserver
-    volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
-    command: certonly -v --webroot --webroot-path=/var/www/certbot --email admin@linkmusic.ru --agree-tos --no-eff-email --force-renewal -d linkmusic.ru
 
   backend:
     build:
