--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -12,10 +12,6 @@ server {
 
     server_name linkmusic.ru www.linkmusic.ru;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
     location / {
         if ($host ~* www\.(.*)) {
           set $host_without_www $1;
@@ -36,9 +32,8 @@ server {
 
     server_name linkmusic.ru www.linkmusic.ru;
 
-    ssl_certificate /etc/nginx/ssl/live/linkmusic.ru/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/linkmusic.ru/privkey.pem;
-    ssl_trusted_certificate /etc/nginx/ssl/live/linkmusic.ru/fullchain.pem;
+    ssl_certificate /etc/nginx/ssl/linkmusic.ru.csr;
+    ssl_certificate_key /etc/nginx/ssl/linkmusic.ru.key;
 
     location /api {
         proxy_http_version 1.1;
