--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,5 +38,8 @@
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.62.1",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "eslint-config-next": "^13.4.4"
   }
 }
