--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
     "react-transition-group": "^4.4.5",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.62.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "translate": "^2.0.2"
   },
   "devDependencies": {
     "eslint-config-next": "^12.0.4"
