--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
     "@strapi/plugin-documentation": "4.10.1",
     "@strapi/plugin-i18n": "4.10.1",
     "@strapi/plugin-users-permissions": "4.10.1",
+    "@strapi/provider-email-nodemailer": "^4.12.4",
+    "@strapi/provider-email-sendgrid": "^4.12.4",
     "@strapi/strapi": "4.10.1",
+    "fs": "^0.0.1-security",
     "pg": "8.10.0"
   },
   "devDependencies": {
