--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
@@ -26,7 +27,7 @@
     "axios": "^1.5.1",
     "imask": "^7.1.3",
     "js-cookie": "^3.0.5",
-    "next": "13.5.3",
+    "next": "^13.5.6",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
