--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -10,12 +10,12 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name linkmusic.ru www.linkmusic.ru;
+    server_name airballoonsufa.ru www.airballoonsufa.ru;
 
     location / {
         if ($host ~* www\.(.*)) {
           set $host_without_www $1;
-          rewrite ^(.*)$ https://linkmusic.ru$request_uri permanent;
+          rewrite ^(.*)$ https://airballoonsufa.ru$request_uri permanent;
         }
         return 301 https://$server_name$request_uri;
     }
@@ -30,10 +30,10 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name linkmusic.ru www.linkmusic.ru;
+    server_name airballoonsufa.ru www.airballoonsufa.ru;
 
-    ssl_certificate /etc/nginx/ssl/linkmusic.ru.csr;
-    ssl_certificate_key /etc/nginx/ssl/linkmusic.ru.key;
+    ssl_certificate /etc/nginx/ssl/airballoonsufa.ru.csr;
+    ssl_certificate_key /etc/nginx/ssl/airballoonsufa.ru.key;
 
     location /api {
         proxy_http_version 1.1;
