--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.20.0",
+    "antd": "^5.16.2",
     "axios": "^1.6.8",
     "next": "14.2.2",
     "react": "^18",
