--- a/front/.env.production
+++ b/front/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_API=https://api.airballoonufa.ru/
-NEXT_PUBLIC_BACKEND_STATIC=https://api.airballoonufa.ru/
+NEXT_PUBLIC_BACKEND_API=https://api.airballoonufa.ru/api
+NEXT_PUBLIC_BACKEND_STATIC=https://api.airballoonufa.ru
