--- a/front/.env.development
+++ b/front/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_API=http://localhost:1337/api
-NEXT_PUBLIC_BACKEND_STATIC=http://localhost:1337
+NEXT_PUBLIC_BACKEND_API=https://api.airballoonufa.ru/api
+NEXT_PUBLIC_BACKEND_STATIC=https://api.airballoonufa.ru
